Initial backport of v2.1.0 to 1.16
FirstLaunchScreen not working yet, itlt.java needs double-checking, config migration needs testing